force-app/main/default/objects/Crew_Appraisal_Answer__c/Crew_Appraisal_Answer__c.object-meta.xml
<CustomObject>
    <label>Crew Appraisal Answer</label>
    <nameField>
        <label>Crew Appraisal Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crew Appraisal Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>