force-app/main/default/objects/Crew_Appraisal_Answer__c/fields/Appraisal_Id__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Id__c</fullName>
    <label>Appraisal Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>