force-app/main/default/objects/Crew_Appraisal_Answer__c/fields/Evaluated_Personel_Id__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_Personel_Id__c</fullName>
    <label>Evaluated Personel Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>