force-app/main/default/objects/Crew_Appraisal_Answer__c/fields/Evaluator_Personel_Id__c.field-meta.xml
<CustomField>
    <fullName>Evaluator_Personel_Id__c</fullName>
    <label>Evaluator Personel Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>