force-app/main/default/objects/Crew_Appraisal_Answer__c/fields/Flight_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Flight_External_Id__c</fullName>
    <label>Flight External Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>