force-app/main/default/objects/Crew_Appraisal_Answer__c/fields/Form_Number__c.field-meta.xml
<CustomField>
    <fullName>Form_Number__c</fullName>
    <label>Form Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>