force-app/main/default/objects/Crew_Appraisal_Answer__c/fields/Raw__c.field-meta.xml
<CustomField>
    <fullName>Raw__c</fullName>
    <label>Raw</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>